Correct html div=>p in item description. Correct heading alignment and text for the 'you may like' section (mobile)

--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -38,3 +38,7 @@ input[type='number'] {
 p:not(:last-child) {
   margin-bottom: 1em;
 }
+
+p {
+  line-height: rem(25);
+}
